--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <body>
     <a href = "index.html" > <h1>Read My Poems</h1></a> <br>
     <br>
-    <p style = "font-size: 20px" > Hey there, it's Nur Mohammad Tausif.
-      Welcome to my site . Here you can find the poems writenn by me.
+    <p style = "font-size: 20px" > Hey there, it's Nur Mohammad Tausif. <br>
+      Welcome to my site . Here you can find the poems writen by me.<br>
       Thanks for not sharing/using them without giving the cradit to the author.
     </p>
   </body>
