--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <html>
 <head>
   <title>Read My Poems </title>
+  <style type="text/css">
+    .img_deg
+    {
+      float: right;
+    }
+    
+    </style>
 </head>
   <body>
     <a href = "index.html" > <h1>Read My Poems</h1></a> <br>
     <br>
-    <img src = "image.jpg">
+    <img class="img_deg" src="image.jpg">
     <p style = "font-size: 20px" > Hey there, it's Nur Mohammad Tausif. <br>
       Welcome to my site . Here you can find the poems writen by me.<br>
       Thanks for not sharing/using them without giving the cradit to the author.
