--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div>
     <img class="img_deg" src="image.jpg">
     <p style = "font-size: 20px" > Hey there, it's Nur Mohammad Tausif. <br>
-      Welcome to my site . Here you can find the poems writen by me.<br>
+      Welcome to my site . Here you can find the poems written by me.<br>
       Thanks for not sharing/using them without giving the cradit to the author.
     </p>
     </div>
